...
      ),
      clipBehavior: Clip.antiAlias,
      child: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
          TextField(
            key: const Key('inputField'),
            onChanged: (val) => context.read<MainViewModel>().updateEntryData(val),
            decoration: InputDecoration(
              hintText: AppLocalizations.of(context)!.inputLabel,
              border: InputBorder.none,
              contentPadding: const EdgeInsets.all(16),
            ),
...
